--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "vercel-build": "npm run build"
+    "vercel-build": "DISABLE_ESLINT_PLUGIN=true npm run build"
   },
   "eslintConfig": {
     "extends": [
