Fix Vercel routing: add static file routes and fix backend static serving

--- a/vercel.json
+++ b/vercel.json
@@ -19,6 +19,18 @@
       "dest": "backend/server.js"
     },
     {
+      "src": "/static/(.*)",
+      "dest": "/static/$1"
+    },
+    {
+      "src": "/images/(.*)",
+      "dest": "/images/$1"
+    },
+    {
+      "src": "/asset-manifest.json",
+      "dest": "/asset-manifest.json"
+    },
+    {
       "src": "/(.*)",
       "dest": "/index.html"
     }
